--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                             </div>
                            
                             <p style="border-left:3px solid yellowgreen; padding-left: 2px;">
-                           As  a customer support Specialist, i ensured that our clients were always happy with the services we offered them.
-                           I responded to customer complains and followed sop's in resolving any issue our cients were facing.
+                           As a customer support Specialist, i ensured that our clients were always happy with the services we offered them.
+                           I responded to customer complains and resolved any issues faced by our cients.
         
                             </p>
                         </div>
